* two static helper classes moved from ae3.api to clean-util